--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^18.2.12",
     "@angular/platform-browser-dynamic": "^18.2.12",
     "@angular/router": "^18.2.12",
+    "chart.js": "^4.4.6",
     "firebase": "^10.14.1",
     "json-server": "^1.0.0-beta.3",
     "rxjs": "~7.8.0",
