--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
       "ES2022",
       "dom"
     ],
-    "typeRoots": ["node_modules/@types"],
+   // "typeRoots": ["node_modules/@types"],
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
