--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -23,6 +23,4 @@ jobs:
         node-version: ${{ matrix.node-version }}
 
     - name: Build
-      run: |
-        npm install
-        npx webpack
+      run: npm install && npm run build
